refactor: Convert new URL(String) to URI.create(String).toURL() Fixes #1353